[gd_scene load_steps=2 format=2]

[ext_resource path="res://Dungeon/Scripts/DungeonMap.gd" type="Script" id=1]

[node name="DungeonMap" type="Spatial"]
script = ExtResource( 1 )

[node name="CellsContainer" type="Spatial" parent="."]

[node name="Tween" type="Tween" parent="."]

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( -0.370891, -0.547668, 0.75, -0.224144, 0.836516, 0.5, -0.901221, 0.0173376, -0.433013, 18.5, 23, 0 )
light_color = Color( 0.807843, 0.776471, 0.517647, 1 )
light_energy = 0.5
shadow_enabled = true

[node name="PlayerContainer" type="Spatial" parent="."]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
